--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>spotlight</title>
+
+    <link rel="stylesheet" href="static/style.css">
   </head>
   <body>
     <div id="app"></div>
